--- a/index.html
+++ b/index.html
@@ -13,40 +13,27 @@
 
             <button>
                 <img src="./assets/plus.svg" alt="Sinal de + roxo">
-                Registrar o meu dia
+                <div>
+                    Registrar o meu dia
+                </div>
             </button>
         </header>
 
         <form id="form-habits">
             <div class="habits">
-                <div class="habit" >🏃‍♂️</div>
-                <div class="habit" >💧</div>
-                <div class="habit" >💪🏼</div>
-                <div class="habit" >😴</div>
-                <div class="habit" >🦮</div>
-                <div class="habit" >🍲</div>
+                <div class="habit" data-name="run" >🏃‍♂️</div>
+                <div class="habit" data-name="water">💧</div>
+                <div class="habit" data-name="fit">💪🏼</div>
+                <div class="habit" data-name="sleep">😴</div>
+                <div class="habit" data-name="journal">📰</div>
+                <div class="habit" data-name="takePills">💊</div>
             </div>
 
-            <div class="days">
-                <div class="day">
-                    <div>03/01</div>
-                    <input type="checkbox" name="run">
-                    <input type="checkbox" name="water">
-                    <input type="checkbox" name="fit">
-                    <input type="checkbox" name="sleep">
-                    <input type="checkbox" name="dog">
-                    <input type="checkbox" name="food">
-                </div>
-                <div class="day">
-                    <div>04/01</div>
-                    <input type="checkbox" name="run">
-                    <input type="checkbox" name="water">
-                    <input type="checkbox" name="fit">
-                    <input type="checkbox" name="sleep">
-                    <input type="checkbox" name="dog">
-                    <input type="checkbox" name="food">
-                </div>
-            </div>
+            <div class="days"></div>
         </form>
+
+        <!-- Utilizando uma biblioteca criada pela Rocketseat -->
+        <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
+        <script src="./script.js"></script>
     </body>
 </html>
